--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     
     <!-- jQuery -->
-    <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="js/jquery-1.10.2.min.js"></script>
 
     <!-- Fotorama -->
     <link href="css/fotorama.css" rel="stylesheet">
@@ -253,7 +253,7 @@
     </footer>
 
     <!-- jQuery -->
-    <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="js/jquery-1.10.2.min.js"></script>
     <!-- Fotorama -->
     <script src="js/fotorama.js"></script>
     <!-- Menu -->
