--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
     </header>
 
-    <section class="section-sobre" id="sobre">
+    <section class="section-sobre js-scroll" id="sobre">
         <h1 class="titulo-section">Sobre Nós</h1>
         <div class="container-sobre">
             <div class="container-amarelo">
@@ -103,7 +103,7 @@
 
     </section>
     
-    <section class="section-servicos" id="servicos">
+    <section class="section-servicos js-scroll" id="servicos">
         <h1 class="titulo-section">Serviços</h1>
         <p class="subtitulo-servicos">Atendemos todos os tipos de eventos e com a
             gente você encontrará o melhor para sua festa.</p>
@@ -179,7 +179,7 @@
         </div>
     </section>
 
-    <section class="section-galeria" id="galeria">
+    <section class="section-galeria js-scroll" id="galeria">
         <h1 class="titulo-section">Galeria</h1>
         <div class="div-galeria">
         <div class="fotorama" 
@@ -253,5 +253,8 @@
     </footer>
     <!-- Menu -->
     <script type="text/javascript" src="js/menu.js"></script>
+    <!-- Animation -->
+    <script type="text/javascript" src="js/animate.js"></script>
+
 </body>
 </html>
