--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                     <a href="#servicos"><li>Serviços</li></a>
                     <a href="#galeria"><li>Galeria</li></a>
                     <a href="#contato"><li>Contato</li></a>
+                    <a href="logon.html"><li>Login</li></a>
                   </ul>
                 </div>
               </nav>
